Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp
@@ -266,7 +266,8 @@ void InjectedBundle::beginTesting(WKDictionaryRef settings)
     m_testRunner->setAcceptsEditing(true);
     m_testRunner->setTabKeyCyclesThroughElements(true);
 
-    m_testRunner->setCustomTimeout(m_timeout);
+    if (m_timeout > 0)
+        m_testRunner->setCustomTimeout(m_timeout);
 
     page()->prepare();
 
